Bug 1465784 - Remove unnecessary render step with async-scene-building. r=sotaro

MozReview-Commit-ID: 8iOQHLhlcjA